--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sonar-scanner": "npm run test-coverage && sonar-scanner",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
-    "e2e-update": "webdriver-manager update --standalone false --gecko false"
+    "e2e-update": "webdriver-manager update --standalone false --gecko false",
+    "audit-dep": "npm audit --json | audit-filter --nsp-config=.nsprc --audit=-"
   },
   "dependencies": {
     "@angular/animations": "^5.2.11",
@@ -55,29 +56,31 @@
     "@ngrx/store": "^5.2.0",
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "^2.8.0",
+    "audit-filter": "^0.5.0",
     "call-number": "^1.0.1",
-    "cordova-ios": "5.0.1",
+    "cordova-ios": "^5.0.1",
     "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^1.11.1",
-    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-firebase": "2.0.5",
+    "cordova-plugin-exit": "^1.0.3",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-inappbrowser": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.4.1",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.5.3",
     "cordova-plugin-ms-adal": "^0.10.2",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
-    "cordova-plugin-screen-orientation": "^3.0.1",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-secure-storage": "^3.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "^5.4.4",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-plugin-x-socialsharing": "^5.6.2",
     "cordova-sqlite-storage": "^2.6.0",
     "cordova-wheel-selector-plugin": "^1.1.2",
-    "cordova-plugin-exit": "^1.0.3",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
@@ -123,7 +126,10 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-x-socialsharing": {
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      },
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-camera": {},
       "mx.ferreyra.callnumber": {},
