--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-firebase": "^2.0.5",
-    "cordova-plugin-inappbrowser": "^2.0.2",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^2.5.3",
     "cordova-plugin-ms-adal": "^0.10.2",
@@ -112,6 +112,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
+    "lodash": "^4.17.15",
     "null-loader": "^0.1.1",
     "protractor": "^5.4.2",
     "ts-loader": "^3.0.3",
